commit tree fc2d32d077434f3cd215e8e78c0b30e4cd91e3cb

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 
     <h4>Issue Bot Camera Capture Archive</h4>
 
-    <img src="images/adam."
+    <img src="https://www.freeimages.com/photo/spring-1373199"
+         alt="purple leaves"
     /> 
     
-    <img src="images/spencer." 
-      
+    <img src="https://www.freeimages.com/photo/spring-1569544" 
+         alt="seedling"
+
     />
 
 </body>
